[package]
name = "pong"
version = "0.1.0"
authors = ["Nick Vanden Eynde <nick@vitanick.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piston = "0.52.1"
piston2d-graphics = "0.39.0"
pistoncore-glutin_window = "0.68.0"
piston2d-opengl_graphics = "0.77.0"
