[package]
name = "web_api"
version = "0.1.0"
authors = ["Nick Vanden Eynde <nick@vitanick.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iron="0.6.1"
router="0.6.0"
logger="0.4.0"
env_logger="0.8.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono= {version="0.4.19", features = ["serde"]}
uuid= {version="0.8.2", features = ["v4", "serde"]}
